# payment-integration

./: .env.example  .gitignore  Cargo.toml  README.md
docker/: Dockerfile  docker-compose.yml
migrations/: 20240101000001_initial_schema.sql
src/: lib.rs  main.rs
src/api/: routes.rs
src/api/handlers/: crypto.rs  health.rs  mod.rs  razorpay.rs  webhooks.rs
src/api/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
src/config/: mod.rs
src/crypto_utils/: address.rs  mod.rs  signature.rs
src/db/: mod.rs  pool.rs
src/db/repositories/: address_repo.rs  mod.rs  payment_repo.rs  transaction_repo.rs  webhook_repo.rs
src/error/: mod.rs
src/models/: mod.rs  payment.rs  transaction.rs  wallet.rs  webhook_event.rs
src/services/: mod.rs  payment_processor.rs
src/services/crypto/: ethereum.rs  lightning.rs  mod.rs  solana.rs  wallet_connect.rs
src/services/razorpay/: client.rs  mod.rs  orders.rs  payments.rs  webhooks.rs
src/websocket/: broadcaster.rs  handler.rs  mod.rs
