[package]
name = "payment-gateway"
version = "1.0.0"
edition = "2021"
authors = ["Payment Gateway Team"]
description = "Production-ready payment gateway API supporting Razorpay and crypto payments"
license = "MIT"
repository = ""
readme = "README.md"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout", "compression-gzip"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Crypto - Ethereum/EVM
ethers = { version = "2", features = ["rustls", "ws"] }

# Crypto - Solana (using newer SDK compatible with ed25519-dalek 2.x)
solana-sdk = "2"
solana-client = "2"
solana-transaction-status = "2"

# Crypto - Bitcoin Lightning
lightning-invoice = "0.32"
bitcoin = { version = "0.32", features = ["serde"] }

# Cryptography & Security
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
ring = "0.17"
ed25519-dalek = { version = "2", features = ["serde"] }
secp256k1 = { version = "0.29", features = ["recovery", "serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Rate Limiting
governor = "0.6"

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5"

# Random number generation
getrandom = "0.2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
fake = { version = "2", features = ["derive"] }
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
